--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,11 @@ jobs:
                   service_account_key: ${{ secrets.GCP_SA_KEY }}
                   export_default_credentials: true
 
+            - name: Authenticate to Google Cloud
+              uses: google-github-actions/auth@v1
+              with:
+                  credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
             - name: Configure Docker
               run: gcloud auth configure-docker us-central1-docker.pkg.dev
 
