--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
 
             - name: Deploy to Cloud Run
               run: |
-                  gcloud run deploy my-app \
+                  gcloud run deploy simetrik-remediation-agent-api \
                     --image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/simetrik-remediation-agent/api:$GITHUB_SHA \
                     --region ${{ secrets.GCP_REGION }} \
                     --platform managed \
