--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
             - name: Reconstruct files from secrets
               run: |
                   mkdir -p env
-                  # The files are expected to be encoded in base 64
+                  # The files are expected to be encoded in base 64, use the base64convert.ps1 to generate the secrets
                   echo "${{ secrets.ENV_B64 }}" | base64 --decode > env/.env
                   echo "${{ secrets.SERVICE_ACCOUNT_B64 }}" | base64 --decode > env/service_account_gmail-agent.json
 
